# Load CppUnit stuff
INCLUDE(${MAF_SOURCE_DIR}/Libraries/modules/FindCppUnit.cmake)
IF (CPPUNIT_FOUND)
  #MESSAGE("Found Cppunit library")
  INCLUDE_DIRECTORIES(${CPPUNIT_INCLUDE_DIR})
  LINK_LIBRARIES(${CPPUNIT_LIBRARIES})
  
  OPTION(BUILD_TEST_EXAMPLES "Enable building of TEST_EXAMPLES classes" OFF)
  IF (BUILD_TEST_EXAMPLES)
    SUBDIRS(Examples)
  ENDIF (BUILD_TEST_EXAMPLES)

ELSE (CPPUNIT_FOUND)
  MESSAGE("Cppunit library not found! Please fill the corresponding cache entries")
ENDIF (CPPUNIT_FOUND)
  
OPTION(BUILD_BASE_TESTING "Enable building of testing for BASE classes" ON)
IF (BUILD_BASE_TESTING)
  SUBDIRS(Base)
ENDIF (BUILD_BASE_TESTING)

OPTION(BUILD_CORE_TESTING "Enable building of testing for CORE classes" ON)
IF (BUILD_CORE_TESTING)
  SUBDIRS(Core)
ENDIF (BUILD_CORE_TESTING)

OPTION(BUILD_GUI_TESTING "Enable building of testing for GUI classes" OFF)
IF (BUILD_GUI_TESTING)
  SUBDIRS(Gui)
ENDIF (BUILD_GUI_TESTING)

OPTION(BUILD_IO_TESTING "Enable building of testing for IO classes" OFF)
IF (BUILD_IO_TESTING)
  SUBDIRS(IO)
ENDIF (BUILD_IO_TESTING)

OPTION(BUILD_OPERATIONS_TESTING "Enable building of testing for OPERATIONS classes" ON)
IF (BUILD_OPERATIONS_TESTING)
  SUBDIRS(Operations)
ENDIF (BUILD_OPERATIONS_TESTING)

OPTION(BUILD_INTERACTION_TESTING "Enable building of testing for Interaction classes" ON)
IF (BUILD_INTERACTION_TESTING)
  SUBDIRS(Interaction)
ENDIF (BUILD_INTERACTION_TESTING)

OPTION(BUILD_VME_TESTING "Enable building of testing for VME classes" ON)
IF (BUILD_VME_TESTING)
  SUBDIRS(VME)
ENDIF (BUILD_VME_TESTING)

OPTION(BUILD_DATAPIPES_TESTING "Enable building of testing for DataPipe classes" ON)
IF (BUILD_DATAPIPES_TESTING)
  SUBDIRS(VME/DataPipes)
ENDIF (BUILD_DATAPIPES_TESTING)

IF (MAF_USE_WXMOZILLA)
  OPTION(BUILD_WXMOZILLA_TESTING "Enable building of testing wxMozilla" OFF)
  IF (BUILD_WXMOZILLA_TESTING)
    SUBDIRS(exMozilla)
  ENDIF (BUILD_WXMOZILLA_TESTING)
ENDIF (MAF_USE_WXMOZILLA)
